stage1/deployment/030-consumer/030-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  template: 
    metadata:
      labels:
        name: consumer
        app: consumer
    spec:
      containers:
        - name: consumer
          image: consumer
          ports:
            - containerPort: 8080
              protocol: TCP
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - consumer
        from:
          kind: ImageStreamTag
          name: consumer:latest
  strategy: 
    type: Rolling
  replicas: 1
