stage1/deployment/030-consumer/050-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  to:
    kind: Service
    name: consumer
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
